# chess-analyzer

./: .gitignore  pyproject.toml
chess_analyzer/: chess_board.ipynb
data/: game1.pgn
